<resources>
    <string name="app_name">Calculadora</string>
    <string name="ingresa_primer_numero">Ingresa primer numero:</string>
    <string name="primer_numero">Numero 1</string>
    <string name="segundo_numero">Numero 2</string>
    <string name="ingresa_segundo_numero">Ingresa segundo numero:</string>
    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicacion">Multiplicacion</string>
    <string name="division">Division</string>
    <string name="resultado">Resultado</string>
    <string-array name="opciones">
        <item>@string/seleccione</item>
        <item>@string/suma</item>
        <item>@string/resta</item>
        <item>@string/multiplicacion</item>
        <item>@string/division</item>
    </string-array>
    <string name="errorfaltanum">Por favor ingrese un numero</string>
    <string name="seleccione">Seleccione operacion...</string>
    <string name="errorfaltaop">Por favor, seleccione una operacion</string>
    <string name="errornumcero">No se puede dividir por cero</string>
</resources>
